transmission/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: transmission-udp
spec:
  selector:
    app: transmission
  ports:
  - protocol: UDP
    port: 51413
    targetPort: 51413
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: transmission-tcp
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 51413
    targetPort: 51413
  type: NodePort
